<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="org.cidie.mascotas.layout.Contacto">
    <!--
        <include
            android:id="@+id/miActionBar"
            layout="@layout/action_bar" />
    -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:gravity="center_horizontal"
        android:text="@string/text_view_contactTitle"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/Contactextitle"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/text_view_contactMessage"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/dimen_text"
        android:textStyle="italic" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin">

        <EditText
            android:id="@+id/textInputName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_input_name"
            android:singleLine="true"
            android:textStyle="bold" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/textInputEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textInputName"
            android:hint="@string/text_input_email"
            android:singleLine="true"
            android:textStyle="bold" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/textInputMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_input_message"
            android:paddingBottom="@dimen/message_padding"
            android:textStyle="bold" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/buttonSend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:elevation="@dimen/elevacion_button"
        android:onClick="onClick"
        android:shadowColor="@color/colorPrimary"
        android:text="@string/button_send_comment"
        android:textSize="@dimen/button_text"
        android:theme="@style/botones" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:src="@mipmap/cidie" />

</LinearLayout>