<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="org.cidie.mascotas.layout.About">
<!--
    <include
        android:id="@+id/miActionBar"
        layout="@layout/action_bar" />
-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:elevation="@dimen/cardview_elevation"
            android:src="@mipmap/cidie" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:gravity="center"
            android:text="@string/text_view_aboutTitle"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/title_about"
            android:textStyle="bold" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/text_view_aboutInfo"
        android:textSize="@dimen/text_about"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/text_view_aboutVersion"
        android:textSize="@dimen/text_about"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/text_view_aboutAppDesign"
        android:textSize="@dimen/text_about"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:text="@string/text_view_aboutEmail"
        android:textColor="@color/colorPrimary"
        android:textColorHighlight="@color/colorAccent"
        android:textSize="@dimen/text_about"
        android:textStyle="bold"

        />

    <com.mikhaellopez.circularimageview.CircularImageView
        android:layout_width="@dimen/circular_photo"
        android:layout_height="@dimen/circular_photo"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:elevation="@dimen/cardview_elevation"
        android:src="@drawable/dog8"
        app:civ_border="true"
        app:civ_border_color="@color/textColor"
        app:civ_border_width="@dimen/circular_border"
        app:civ_shadow="true"
        app:civ_shadow_color="@color/colorAccent"
        app:civ_shadow_radius="@dimen/circular_radio" />

</LinearLayout>